<resources>
    <string name="app_name">Movie Trailer</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_name">movie name</string>
    <string name="_8_4">8.4</string>
    <string name="settings">Settings</string>
    <string name="dots">dots</string>
    <string name="search">Search</string>
    <string name="search_for_movies">Search for Movies</string>
    <string name="no_match">"No Match. Please try again"</string>
    <string name="movie_details">Movie Details</string>
    <string name="logo">Logo</string>
    <string name="date">%1$s |</string>

    <!--Settings For RateBy Preference-->
    <string name="sort_default">popular</string>
    <string name="sort_key">sort</string>
    <string name="sort_label">Sort By</string>

    <!--Sort Label-->
    <string name="popular_label">Popular</string>
    <string name="top_rated_label">Top Rated</string>
    <string name="now_playing_label">Now Playing</string>
    <string name="upcoming_label">Upcoming</string>

    <!--Sort Values-->
    <string name="popular_value">popular</string>
    <string name="top_rated_value">top_rated</string>
    <string name="now_playing_value">now_playing</string>
    <string name="upcoming_value">upcoming</string>

    <string name="backdrop_picture">Backdrop Picture</string>

    <string name="description">Thomas wakes up in an ascending elevator. With him are supply containers marked WCKD. When the elevator reaches the top, a door above him opens and he\'s surrounded by a Lord of the Flies type gaggle of young men/boys. Thomas takes off running, but stops when he realizes he\'s in a small glade surrounded by huge walls.</string>
    <string name="en">| en</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="toy_story_4_official_teaser_trailer">Toy Story 4 | Official Teaser Trailer</string>
    <string name="reviewDescription">The Dilwale Dulhania Le Jayenge is a film considered by most to be one of the greatest ever made. From The American Film Institute to as voted by users on the Internet Movie Database (IMDB) it is consider to be one of the best.</string>
    <string name="read_more">Read more</string>
    <string name="mohamedelsharkawy">MohamedElsharkawy</string>
    <string name="movie_review">Review</string>
    <string name="youtube_url">https://www.youtube.com/watch?v=</string>
    <string name="trailer_of_the_movie">Trailer Of the movie</string>
    <string name="play_icon">Play Icon</string>
    <string name="no_available_reviews">No Available Reviews</string>
    <string name="no_available_trailers">No Available Trailers</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="thumbnail_firstPart">https://i1.ytimg.com/vi/</string>
    <string name="thumbnail_secondPart">/hqdefault.jpg</string>
    <string name="favorites">Favorites</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="delete_all_favorites">Delete All Favorites</string>

    <string name="border">|</string>
    <string name="blank">%d</string>
    <string name="no_movies_found">No Movies found. Kindly visit again to fetch them.</string>
    <string name="see_all">See All</string>
    <string name="see_all_trailers">See All Trailers</string>
    <string name="about">About</string>
    <string name="attribution">The Movie Database (TMDb) is a community built movie and TV database. Every piece of data has been added by our amazing community dating back to 2008.</string>
    <string name="credit">Movie Trailer App uses the TMDb API but it is not endorsed or certified by TMDb.</string>

    <string name="night_mode">Night Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="add_movie">add movie</string>
    <string name="actor_profile">Actor Profile</string>
    <string name="no_available_cast">No Available Cast</string>
    <string name="cast">Cast</string>
</resources>
