<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.marwaeltayeb.movietrailer.activities.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backdropImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/backdrop_picture"
            android:scaleType="fitXY"
            android:src="@drawable/backdrop" />

        <TextView
            android:id="@+id/titleOfMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:text="@string/the_maze_runner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/releaseDateOfMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#aeaeae"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"
                tools:text="2016-08-03" />

            <TextView
                android:id="@+id/languageOfMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#aeaeae"
                android:textSize="18sp"
                tools:text="@string/en" />
        </LinearLayout>

        <TextView
            android:id="@+id/ratingOfMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star_black_24dp"
            android:textColor="#aeaeae"
            android:textSize="18sp"
            tools:text="@string/_8_4" />

        <TextView
            android:id="@+id/descriptionOfMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#1d1d1d"
            android:textColor="#fff"
            android:textSize="17sp"
            tools:text="@string/description" />
    </LinearLayout>

</ScrollView>