<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/touch_feedback"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:scaleType="fitXY"
                tools:src="@color/gary" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:padding="3dp"
                android:textColor="#fff"
                android:textSize="14sp"
                tools:text="@string/movie_name" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/ic_star_yellow"
                android:padding="2dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="13sp"
                tools:text="@string/_8_4" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>